--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 </script>
 </head>
 <body>
+<h1>test</ht>
 <div class="outer">
 	<!--[header]-->
     <section class="container_12 ">
@@ -166,7 +167,7 @@
                 </figure>
                 
                 <figure class="sidebar_cont">
-                    <h2 class="acc_trigger">Price<span> &nbsp;</span></h2>
+                    <h2 class="acc_trigger">PricePrice<span> &nbsp;</span></h2>
                     <div class="sidebar_info acc_container">
                         <div class="price_box">
                             <div class="price_cont">
