--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 </figure>
                 
                 <figure class="sidebar_cont">
-                    <h2 class="acc_trigger">PricePrice<span> &nbsp;</span></h2>
+                    <h2 class="acc_trigger">Price<span> &nbsp;</span></h2>
                     <div class="sidebar_info acc_container">
                         <div class="price_box">
                             <div class="price_cont">
@@ -184,9 +184,6 @@
                             </div>	
                         </div>
                     </div>
-                </figure>
-                <figure class="sidebar_cont">
-                    <h2 class="acc_trigger">rice<span> &nbsp;</span></h2>
                 </figure>
                 
             </aside>
